--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <?php if (isset($erro)) { ?>
         <p><?php echo $erro; ?></p>
     <?php } ?>
-    <form method="post" action="index.php">
+    <form method="post" action="tela.php">
         <label for="usuario">Usuário:</label>
         <input type="text" name="usuario" id="usuario" required><br><br>
         
